--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -28,8 +28,8 @@ steps:
         "gcp_zone": "${_COMPOSER_ZONE_ID}", \
         "dataflow_jar_location": "${_DATAFLOW_JAR_BUCKET}", \
         "dataflow_jar_file": "dlp-rdb-bq-import-dataflow.jar", \
-        "dataflow_staging_bucket": "${_DATAFLOW_STAGING_BUCKET}"} > \
-        /workspace/composer_variables.json ]
+        "dataflow_staging_bucket": "${_DATAFLOW_STAGING_BUCKET}"} > /workspace/composer_variables.json && \
+        cat /workspace/composer_variables.json
     id: 'prepare-composer-env-json'
   - name: gcr.io/cloud-builders/gcloud
     args: [ 'composer', 'environments', 'storage', 'data', 'import', '--environment', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}', '--source', '/workspace/composer_variables.json' ]
