--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -23,12 +23,12 @@ steps:
     args:
       - '-c'
       - |
-        echo { "gcp_project": "${PROJECT_ID}", \
-        "gcp_region": "${_COMPOSER_REGION}", \
-        "gcp_zone": "${_COMPOSER_ZONE_ID}", \
-        "dataflow_jar_location": "${_DATAFLOW_JAR_BUCKET}", \
-        "dataflow_jar_file": "dlp-rdb-bq-import-dataflow.jar", \
-        "dataflow_staging_bucket": "${_DATAFLOW_STAGING_BUCKET}"} > /workspace/composer_variables.json && \
+        echo { \"gcp_project\":\"${PROJECT_ID}\", \
+        \"gcp_region\":\"${_COMPOSER_REGION}\", \
+        \"gcp_zone\":\"${_COMPOSER_ZONE_ID}\", \
+        \"dataflow_jar_location\":\"${_DATAFLOW_JAR_BUCKET}\", \
+        \"dataflow_jar_file\":\"dlp-rdb-bq-import-dataflow.jar\", \
+        \"dataflow_staging_bucket\":\"${_DATAFLOW_STAGING_BUCKET}\"} > /workspace/composer_variables.json && \
         cat /workspace/composer_variables.json
     id: 'prepare-composer-env-json'
   - name: gcr.io/cloud-builders/gcloud
