--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ buildscript {
         mavenCentral()
         jcenter()
         maven {
-     		 url "https://plugins.gradle.org/m2/"
-    	}
+            url "https://plugins.gradle.org/m2/"
+        }
 
     }
     dependencies {
@@ -43,17 +43,17 @@ apply plugin: 'com.google.cloud.tools.jib'
 //apply plugin: "com.diffplug.gradle.spotless"
 
 //mainClassName = System.getProperty("mainClass")
-mainClassName = 'com.google.swarm.sqlserver.migration.DBImportPipeline'
+mainClassName = 'com.google.swarm.sqlserver.migration.PipelineOrchestrator'
 jib {
-  from {
-    image = 'gcr.io/dataflow-templates-base/java8-template-launcher-base:latest'
-  }
-  container {
-    appRoot = '/template/dlp-migration-template'
-    entrypoint = 'INHERIT'
-	environment = [DATAFLOW_JAVA_COMMAND_SPEC:'/template/dlp-migration-template/resources/java_command_spec.json']
+    from {
+        image = 'gcr.io/dataflow-templates-base/java8-template-launcher-base:latest'
+    }
+    container {
+        appRoot = '/template/dlp-migration-template'
+        entrypoint = 'INHERIT'
+        environment = [DATAFLOW_JAVA_COMMAND_SPEC: '/template/dlp-migration-template/resources/java_command_spec.json']
 
-  }
+    }
 }
 group 'com.google.swarm'
 version '0.1.0'
@@ -69,10 +69,9 @@ tasks.withType(JavaCompile) {
 
 repositories {
 
-   mavenCentral()
+    mavenCentral()
 
 }
-
 
 
 dependencies {
@@ -81,10 +80,10 @@ dependencies {
     compile group: 'org.apache.beam', name: 'beam-sdks-java-core', version: dataflowBeamVersion
     compile group: 'org.apache.beam', name: 'beam-runners-google-cloud-dataflow-java', version: dataflowBeamVersion
     compile group: 'org.apache.beam', name: 'beam-runners-direct-java', version: dataflowBeamVersion
-	compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.5'
-	compile group: 'org.apache.beam', name: 'beam-sdks-java-io-jdbc', version: dataflowBeamVersion
+    compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.5'
+    compile group: 'org.apache.beam', name: 'beam-sdks-java-io-jdbc', version: dataflowBeamVersion
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
-	compile "com.google.auto.value:auto-value-annotations:1.6.2"
+    compile "com.google.auto.value:auto-value-annotations:1.6.2"
     annotationProcessor "com.google.auto.value:auto-value:1.6.2"
     compile 'com.google.cloud:google-cloud-storage:1.55.0'
     compile group: 'com.google.cloud', name: 'google-cloud-dlp', version: '0.100.0-beta'
@@ -94,19 +93,19 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.2'
 
 
-    compile('com.google.guava:guava:21.0'){
+    compile('com.google.guava:guava:21.0') {
         force = true
     }
 
-    compile ('com.google.api-client:google-api-client:1.23.0') {
+    compile('com.google.api-client:google-api-client:1.23.0') {
         force = true
     }
 
 
-	testCompile group: 'org.apache.beam', name: 'beam-runners-direct-java', version: dataflowBeamVersion
-	testCompile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.5'
-	testCompile 'junit:junit:4.12'
-	testCompile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '7.0.0.jre8'
+    testCompile group: 'org.apache.beam', name: 'beam-runners-direct-java', version: dataflowBeamVersion
+    testCompile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.5'
+    testCompile 'junit:junit:4.12'
+    testCompile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '7.0.0.jre8'
 
 
 }
@@ -116,9 +115,10 @@ jar {
         attributes ('Main-Class': mainClassName)
     }
 
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
-
-
 
 
 compileJava {
