--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     annotationProcessor "com.google.auto.value:auto-value:1.6.2"
     compile 'com.google.cloud:google-cloud-storage:1.55.0'
     compile group: 'com.google.cloud', name: 'google-cloud-dlp', version: '0.100.0-beta'
+    compile "com.google.cloud:google-cloud-storage:0.100.0-beta"
     compile 'net.sourceforge.jtds:jtds:1.3.1'
     compile group: 'org.json', name: 'json', version: '20180813'
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.11.2'
